--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "travel-guru-client",
+  "name": "react-starter-templates",
   "private": true,
   "version": "0.0.0",
   "type": "module",
