--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@szhsin/react-accordion": "^1.2.4",
+    "daisyui": "^4.12.10",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0",
+    "react-icons": "^4.12.0",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.10.0",
     "react-toastify": "^9.1.2",
